<resources>
    <string name="app_name">QQQ</string>
    <string name="time_adjustment_description">Select -10 minutes if you want to be aware of 10 minutes before the prayer time.</string>
    <string name="swipe_to_right">Swipe right</string>
    <string name="fajr">Fajr</string>
    <string name="sunrise">Sunrise</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="sound">Sound</string>
    <string name="islamic_events">Islamic events</string>
    <string name="selected_language">Selected language:</string>
    <string name="other_languages">Other languages:</string>
    <string name="translations">Translations</string>
    <string name="prayer">Prayer</string>
    <string name="quran">Quran</string>
    <string name="zikr">Zikr</string>
    <string name="tespihat">Tespihat</string>
    <string name="names">Names</string>
    <string name="rules">Tajweed rules</string>
    <string name="hatim_quran">Hatim Quran</string>
    <string name="colon" translatable="false">&#160;:</string>
    <string name="prayer_fajr">Morning prayer</string>
    <string name="qaza">Qaza Guide</string>
    <string name="prayer_dhuhr">Dhuhr prayer</string>
    <string name="prayer_asr">Asr prayer</string>
    <string name="prayer_maghrib">Maghrib prayer</string>
    <string name="prayer_isha">Isha prayer</string>
    <string name="oraza_qaza">Fast qaza</string>
    <string name="search">Search</string>
    <string name="close">Close</string>
    <string name="choose_the_theme_above">Choose the theme above</string>
    <string name="version_code">1.5</string>
    <string name="todays_goal_achieved">Today\'s goal achieved</string>
    <string name="open_monthly_schedule">Open monthly schedule</string>
    <string name="rate_us_long_string">How do you like our app? Please rate us!</string>
    <string name="rate">Rate</string>
    <string name="auto_scroll">Auto Scroll</string>
    <string name="play">Play</string>
    <string name="notifications_not_works_long_text">We have detected battery saving settings which might interrupt notifications on your device.</string>
    <string name="manual">Manual</string>
    <string name="adaptive_battery">Adaptive battery</string>
    <string name="battery_settings">Battery settings</string>
    <string name="autostart_settings">AutoStart settings</string>
    <string name="optimize_battery_settings">Optimize battery settings</string>
    <string name="arabic">Arabic</string>
    <string name="transcription">Transcription</string>
    <string name="translation">Translation</string>
    <string name="tajweed_beta">Tajweed beta</string>
    <string name="zhuma_mubarak">Jumma Mubarak</string>
    <string name="read_kahf">Read sura Kahf</string>
    <string name="meaning">Meaning</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="adj_offset_prayer_times_explation">To adjust prayer time move button</string>
    <string name="azans">Azans</string>
    <string name="change_zikr_name">Change zikr name</string>
    <string name="set_ayah_limit">Enter value</string>
    <string name="choose_calculation_explanation">Please choose a prayer time calculation method. You can change it later in Settings.</string>
    <string name="find_automatically">Automatic detection</string>
    <string name="choose_prayer">Choose prayer</string>
    <string name="zero">0</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="symbol">№</string>
    <string name="compass_calibration">Compass Calibration</string>
    <string name="compass_calibration_explanation">While holding your device and following the method shown on-screen, move your phone around three times, tracing a figure eight in the process.</string>
    <string name="choose_your_current_location">Choose your current location</string>
    <string name="english">English</string>
    <string name="latin">Latin</string>
    <string name="russion">Русский</string>
    <string name="kiril">Кириллица</string>
    <string name="kazakh">Қазақша</string>
    <string name="kirill">Кирил</string>
    <string name="select_your_current_location">Use current geolocation</string>
    <string name="names_99">99 names of Allah</string>
    <string name="last_reads">Last Reads :</string>
    <string name="bookmarks">Bookmarks :</string>
    <string name="twice_zero">00</string>
    <string name="prayer_time">Prayer time</string>
    <string name="not_setted_time">--:--</string>
    <string name="quran_karim">Quran Karim</string>
    <string name="continue_sura">Continue reading</string>
    <string name="delete_dua_from_database">Delete dua from database</string>
    <string name="skip">Skip</string>
    <string name="no_entries">No entries</string>
    <string name="monthly_schedule">Monthly schedule</string>
    <string name="determine">Determine</string>
    <string name="open_settings_page">Open settings page</string>
    <string name="notifications_does_not_work_explanation">If adhan notifications are constantly being delayed or not received at all, please check the notifications options by going to Qamar settings → Notifications and Sound → \'Notifications not working?\'.</string>
    <string name="attention">Please note</string>
    <string name="storage_permission_explanation">Құран деректерін сыртқы қоймаға сақтау үшін рұқсат сұралуда. Сыртқы қоймаға сақтауға рұқсат бересіз бе?</string>
    <string name="allow">Allow</string>
    <string name="sura_with_name" />
    <string name="no_results_found">No results found</string>
    <string name="am_pm_hours">24 hour format</string>
    <string name="vibrate_on_sound">Vibrate on sound</string>
    <string name="vibrate_on_zikr">Vibrate on dhikr</string>
    <string name="aware_of_holy_days">Awareness of holy days</string>
    <string name="prayer_tespihat">Prayer Tespihat</string>
    <string name="asr_calculation_method">Asr calculation method</string>
    <string name="adj_hijri_date">Hijri date correction</string>
    <string name="set_goals">Set goals</string>
    <string name="prayer_time_source">Prayer times source</string>
    <string name="geolocation">Current location</string>
    <string name="prayer_adj">Manual correction</string>
    <string-array name="azan_sound">
        <item>Mishary Rashid Al Afasi</item>
        <item>Nature sounds</item>
        <item>Notification</item>
    </string-array>
    <string name="regulate_notifications">Notifications adjustment</string>
    <string name="notifications_does_not_work">Notifications not working?</string>
    <string name="go_to_help">Visit help center</string>
    <string name="choose_quran_translation">Quran translation</string>
    <string name="choose_transcription_language">Transcription language</string>
    <string name="technical_support">Customer support</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="rate_the_application">Rate app</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="quran_hatim_dua">Dua Khatmil Quran</string>
    <string name="quran_katim_in_arabic">دُعَاءُ خَتْمِ القُرْآنِ الكَريمِ</string>
    <string name="ghunna">Ghunnah</string>
    <string name="ikhfa">Ikhfaa’ (Conceal)</string>
    <string name="idgham">Idghaam with Ghunna (Merge)</string>
    <string name="idgham_without_ghunna">Idghaam without Ghunna (Merge)</string>
    <string name="iqlab">Iqlaab(Flipping)</string>
    <string name="qalqala">Al-Qalqalah (Slipping)</string>
    <string name="no_need_to_read">No need to read</string>
    <string name="stop_signs">Waqf (Stopping &amp; Pausing Signs in the Quran) signs</string>
    <string name="sajda_ayats">Sajda ayats</string>
    <string name="mad_6">Мadd (lengthening). 6 harakat. (Compulsory)</string>
    <string name="mad_4_or_5">Мadd connected 4 or 5</string>
    <string name="mad_2_4_6">Мadd exposed to Sukoon (2, 4 or 6)</string>
    <string name="mad_2">Мadd 2 harakat</string>
    <string name="ghunna_1">\tFor every noon and meem mushaddad, i.e. for every noon and meem that have a shaddah, one must sound a ghunnah.
                            \n\tRecall a ghunnah is the sound made entirely by the nose [nasal passage]. It is almost like a hum and completes the sound of the noon or meem. Ghunnah is directly translated to “nasalisation” and this should not be longer than two counts. i.e. similar to the time it takes to say the words: “one – two”.
                            \n\tIt is the simplest rule, because you just need to check, does the noon/meem have a shaddah on top? If so, sound a ghunnah.
    </string>
    <string name="ikhfa_1">Literal meaning: To conceal something</string>
    <string name="ikhfa_2">The rule: If any of the 15 letters of Ikhfaa’ come after Noon As-Sakinah or Tanween the word will be read between Ith’har and Idghaam with the existence of Ghunna, and the duration will be of two Harakah.</string>
    <string name="ikhfa_3">ف ق ك ث ت خ ذ د ذ ش س ض ص ظ ط</string>
    <string name="ikhfa_4" />
    <string name="ikhfa_5" />
    <string name="idgham_1">Literal meaning: To merge something into something else</string>
    <string name="idgham_3">If any of these letters come after Nûn As-Sakinah or Tanween it is read with Ghunna.</string>
    <string name="idgham_2">It has four letters (ي , ن , م , و (يَنْمُو.</string>
    <string name="idgham_4" />
    <string name="idgham_5" />
    <string name="idgham_without_ghunna_1">It has two letters:</string>
    <string name="idgham_without_ghunna_2">"ر ل "</string>
    <string name="idgham_without_ghunna_3">If any of these two letters precede Nûn As-Sakinah or Tanween it will be read without Ghunna.</string>
    <string name="iqlab_1">After every Noon Saakinah or Tanween, if the letter baa (ب) follows, the sound must be flipped [i.e. changed] to the sound of the letter meem (م). </string>
    <string name="iqlab_2">The lips should not be entirely pressed together, to allow for the meem to come through the nasal passage as well. The mouth should be prepared to say the baa after sounding through the meem. So the above, min b‘ad is sounds like mimm b‘ad when read. What ever you do, take this piece of advice and do not get mixed up between the full shaped meem (م) drawn above letters to indicate iqlaab, and the cut meem (مـ) to indicated a compulsory stop. Refer to the resources link below. Iqlaab must be sounded for two counts, i.e. the time it takes to say the words, “one – two”.</string>
    <string name="qalqala_1">
        \tQalqalah: sound articulation and echo. In essence the word means shaking/disturbance. In Tajweed, it means to disturb the letter that has sukoon, i.e. that is saakin, but without any corresponding movement of the mouth and jaw that is associated with voweled letters (i.e. letters that have fat-ha, dammah, or kasra). Qalqalah “shakes” to “echo” the letter without taking up the preceding or succeeding letter’s diacritic.
        \n\tTo explain:
        \n\tThere are five letters in the Arabic alphabet that apply to Qalqalah. These five letters are:
    </string>
    <string name="qalqala_2">" ج ق ط ب د"</string>
</resources>