<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_pray_times"
        android:icon="@drawable/ic_prayer"
        android:title="@string/prayer_time" />
    <item
        android:id="@+id/navigation_quran"
        android:icon="@drawable/ic_quran"
        android:title="@string/quran_karim" />
    <item
        android:id="@+id/navigation_dua"
        android:icon="@drawable/ic_tespihat"
        android:title="@string/zikr" />
    <item
        android:id="@+id/navigation_tespihat"
        android:icon="@drawable/ic_dhihr"
        android:title="@string/zikr" />
    <item
        android:id="@+id/navigation_asma"
        android:icon="@drawable/ic_asma"
        android:title="@string/names_99" />
</menu>