<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="e.muslim.prayer.R" />

        <import type="android.view.View" />

        <import type="androidx.core.content.ContextCompat" />

        <variable
            name="vm"
            type="e.muslim.prayer.presentation.activity.BottomNavigationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/mainBackground"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:fitsSystemWindows="true"
        tools:ignore="contentDescription">

        <fragment
            android:id="@+id/nav_host_fragment_main"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_40sdp"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navGraph="@navigation/mobile_navigation"
            tools:ignore="FragmentTagUsage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_navigation_bg"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_8sdp"
                android:paddingTop="@dimen/_24sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:visibility="@{vm.bottomNavigationVisibility ? View.VISIBLE : View.GONE}"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:id="@+id/click1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ripple"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:onClick="@{() -> vm.onClick(1)}"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/bySura"
                        customBottomNavigationImageTint="@{vm.first}"
                        android:layout_width="@dimen/_21sdp"
                        android:layout_height="@dimen/_21sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_prayer" />

                    <TextView
                        android:id="@+id/text1"
                        style="@style/BottomSheetText"
                        customBottomNavigationColor="@{vm.first}"
                        android:text="@string/prayer" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/click2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ripple"
                    android:gravity="center"
                    android:onClick="@{() -> vm.onClick(2)}"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image2"
                        customBottomNavigationImageTint="@{vm.second}"
                        android:layout_width="@dimen/_21sdp"
                        android:layout_height="@dimen/_21sdp"
                        android:src="@drawable/ic_quran" />

                    <TextView
                        android:id="@+id/text2"
                        style="@style/BottomSheetText"
                        customBottomNavigationColor="@{vm.second}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quran" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/click3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ripple"
                    android:gravity="center"
                    android:onClick="@{() -> vm.onClick(3)}"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image3"
                        customBottomNavigationImageTint="@{vm.third}"
                        android:layout_width="@dimen/_22sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:src="@drawable/ic_tespihat" />

                    <TextView
                        android:id="@+id/text3"
                        style="@style/BottomSheetText"
                        customBottomNavigationColor="@{vm.third}"
                        android:text="@string/zikr" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/click4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ripple"
                    android:gravity="center"
                    android:onClick="@{() -> vm.onClick(4)}"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/image4"
                        customBottomNavigationImageTint="@{vm.fourth}"
                        android:layout_width="@dimen/_21sdp"
                        android:layout_height="@dimen/_21sdp"
                        android:src="@drawable/ic_tespihat" />

                    <TextView
                        android:id="@+id/text4"
                        style="@style/BottomSheetText"
                        customBottomNavigationColor="@{vm.fourth}"
                        android:text="@string/tespihat" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/click5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ripple"
                    android:gravity="center"
                    android:onClick="@{() -> vm.onClick(5)}"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image5"
                        customBottomNavigationImageTint="@{vm.fifth}"
                        android:layout_width="@dimen/_21sdp"
                        android:layout_height="@dimen/_21sdp"
                        android:src="@drawable/ic_asma" />

                    <TextView
                        android:id="@+id/text5"
                        style="@style/BottomSheetText"
                        customBottomNavigationColor="@{vm.fifth}"
                        android:text="@string/names" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:fitsSystemWindows="false"
            android:visibility="gone"
            app:elevation="0dp"
            app:labelVisibilityMode="unlabeled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/menu" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
